--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+@layer utilities {
+  .nav__link {
+    @apply relative text-base font-medium w-fit block after:block after:content-[''] after:absolute after:h-[3px] after:bg-green-400 
+    after:bottom-0 after:left-0 after:w-0 after:transition-all after:duration-300 hover:after:w-full;
+  }
+}
